# Nedaa

./: .gitignore  CMakeLists.txt  Nidaa.md  README.md  countries.json  installer.iss  states.json
.claude/: settings.local.json
src/: CalcMethod.cpp  CalcMethod.h  Cities.cpp  Cities.h  Config.cpp  Config.h  DataManager.cpp  DataManager.h  HijriDate.cpp  HijriDate.h  Lang.cpp  Lang.h  Log.cpp  Log.h  LogSender.cpp  LogSender.h  PrayerTimes.cpp  PrayerTimes.h  SettingsFrame.cpp  SettingsFrame.h  Speech.cpp  Speech.h  SupportDialog.cpp  SupportDialog.h  TrayIcon.cpp  TrayIcon.h  Updater.cpp  Updater.h  main.cpp  secrets.h.template
